# ats-pd

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md  ats-noise.pd  ats-sin-noi.pd  ats-sin.pd  ats-struct.pd  test.pd  test.sh
pd/: ats-data-help.pd  ats-sinnoi~-help.pd  atsdata-help.pd  randi.pd
src/: cache.rs  data.rs  externals.rs  lib.rs
