[package]
name = "ats"
version = "0.1.0"
authors = ["Alex Norman <alex@x37v.info>"]
edition = "2018"

[lib]
name = "ats"
crate-type = ["cdylib"]

[dependencies]
ats-sys = { git = "https://github.com/x37v/ats-sys.git" }
pd-sys = "0.1.0"
pd-ext = { git = "https://github.com/x37v/puredata-rust", branch = "develop" }
pd-ext-macros = { git = "https://github.com/x37v/puredata-rust", branch = "develop" }
byteorder = "1.3.2"
lazy_static = "1.4.0"
clap = "2.33.0"
tempfile = "3.1.0"
